# DevTransactions-BE-monorepo

./: .gitignore  .python-version  Dockerfile  LICENCE  README.md  ingress.yaml  nx.json  package-lock.json  package.json  pants.toml  pyproject.toml
.github/workflows/: deploy.yml
apps/centralizer/: README.md  alembic.ini  project.json  pyproject.toml
apps/centralizer/src/: adapter.py  config.py  main.py
apps/document/: alembic.ini  project.json  pyproject.toml
apps/document/alembic/: env.py
apps/document/src/: config.py  database.py  main copy.py  main.py
apps/document_bridge/: README.md  project.json  pyproject.toml
apps/document_bridge /: README.md  project.json  pyproject.toml
apps/document_bridge /src/: main.py
apps/document_bridge/src/: config.py  main.py
apps/request/: README.md  alembic.ini  project.json  pyproject.toml
apps/request/alembic/: env.py
apps/request/src/: config.py  main.py
apps/request_bridge/: README.md  project.json  pyproject.toml
apps/request_bridge /: project.json  pyproject.toml
apps/request_bridge /src/: config.py  main.py
apps/request_bridge/src/: config.py  main.py
apps/user/: alembic.ini  project.json  pyproject.toml
apps/user/alembic/: env.py
apps/user_bridge/: README.md  project.json  pyproject.toml
auth/: pyproject.toml
libs/auth/: README.md  project.json  pyproject.toml
libs/bridges/: get_user_id_bridge.py  operators_bridge.py  register_user.py  user_bridges.py
libs/db/: project.json  pyproject.toml
libs/document_storage/: README.md  project.json  pyproject.toml
libs/hoppy/: README.md  project.json  pyproject.toml
libs/microservices/: README.md  project.json  pyproject.toml
libs/ms_tools/: README.md  project.json  pyproject.toml
libs/notification/: README.md  project.json  pyproject.toml
libs/queues/: README.md  project.json  pyproject.toml
libs/secret/: README.md  project.json  pyproject.toml
libs/secrets/: README.md  project.json  pyproject.toml
reports/hoppy/: pylint.txt
reports/user/: pylint.txt
(+71 files in other folders)
