[tool.nx]
autoActivate = true

[tool.poetry]
name = "dev-transactions-be-monorepo"
version = "1.0.0"
description = ""
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [tool.poetry.dependencies]
  python = "^3.12"
  faststream = {extras = ["rabbit"], version = "^0.4.7"}

    [tool.poetry.dependencies.document]
    path = "apps/document"
    develop = true

    [tool.poetry.dependencies.user]
    path = "apps/user"
    develop = true

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
autopep8 = "2.0.2"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-html = "3.2.0"

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
